change implementation to partition results across simulations so we can produce a summary row- writing n (simulations) rows rather than nt (simulations * time) rows